# backend/api/src/main/java/com/bankofz/mainframemodernization/inqtran/domain/ErrorResponse.java
@@ -1,0 +1,8 @@
+package com.bankofz.mainframemodernization.inqtran.domain;
+
+public record ErrorResponse(
+        String code,
+        String message,
+        String correlationId
+) {
+}
