# backend/api/src/main/java/com/bankofz/mainframemodernization/inqtran/domain/TransactionQueryCriteria.java
@@ -1,0 +1,11 @@
+package com.bankofz.mainframemodernization.inqtran.domain;
+
+public record TransactionQueryCriteria(
+        String sortCode,
+        String accountNumber,
+        String lowerDateBound,
+        String upperDateBound,
+        int limit,
+        int offset
+) {
+}
